roulette multiple elements clockwise

--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <div id="mocha"></div>
-    <div class="parent">
-    </div>
+    <div class="parent"></div>
     <script src="mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../../build/build.js"></script>
@@ -16,5 +15,6 @@
     <script>
       mocha.run();
     </script>
+
   </body>
 </html>
